--- a/ru.html
+++ b/ru.html
@@ -1,5 +1,10 @@
 <!DOCTYPE html>
 <title>DIMAAAAA</title>
-hmm
+<center>  
+  <font face="roboto" color="green"><b>Здравствуйте</b>
+
+Портфолио: 
+    </font>
+</center>
 </body>
 </html>
