--- a/ru.html
+++ b/ru.html
@@ -1,10 +1,20 @@
 <!DOCTYPE html>
 <title>DIMAAAAA</title>
+.container {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translateX(-50%) translateY(-50%);
+
+
 <center>  
   <font face="roboto" color="green"><b>Здравствуйте</b>
 
 Портфолио: 
     </font>
+  
+  
+ } 
 </center>
 </body>
 </html>
