--- a/ru.html
+++ b/ru.html
@@ -1,13 +1,8 @@
 <!DOCTYPE html>
 <title>DIMAAAAA</title>
-.container {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translateX(-50%) translateY(-50%);
-}
-<center>  
-  <font face="roboto" color="green"><b>Здравствуйте</b>
+p {   font-family: "Open Sans", Tahoma, sans-serif; } 
+<center>
+<font face="sans-serif" color="green"><b>Здравствуйте</b></font>
 
 Портфолио: 
     </font>
