--- a/ru.html
+++ b/ru.html
@@ -1,10 +1,27 @@
 <!DOCTYPE html>
-<title>DIMAAAAA</title>
-p {   font-family: "Open Sans", Tahoma, sans-serif; } 
+<title>DIMAAAAA</title> 
 <center>
-<font face="sans-serif" color="green"><b>Здравствуйте</b></font>
+    <font face="Roboto" color="green"><b>Здравствуйте</b>
 
-Портфолио: 
+    Портфолио:
+        <a href="https://fl.ru/users/DIMAAAAA">FL.ru</a>
+        <a href="https://dribbble.com/DIMAAAAA">Dribbble</a>
+    Контакты:
+        Email: <a href="mailto:workdimaaaaa@posteo.de">workdimaaaaa@posteo.de</a>
+        ICQ: 380662645
+        Skype: DmitryKryndach
+        
+        <form action="mailto:workdimaaaaa.posteo.de" method="post" enctype="text/plain">
+Name:<br>
+<input type="text" name="name"><br>
+E-mail:<br>
+<input type="text" name="mail"><br>
+Comment:<br>
+<input type="text" name="comment" size="50"><br><br>
+<input type="submit" value="Send">
+<input type="reset" value="Reset">
+</form>
+        
     </font>
 </center>
 </body>
