--- a/ru.html
+++ b/ru.html
@@ -1,34 +1,17 @@
 <!DOCTYPE html>
 <title>DIMAAAAA</title> 
 <center>
-    <font face="Roboto-bold" color="green"><b>Здравствуйте</b></font>
+    <font color="green"><b>Здравствуйте</b></font>
          <p></p>
-    <font face="Roboto-bold" color="green">
+    <font color="gray">
         Портфолио:
-         <p></p>
              <a href="https://fl.ru/users/DIMAAAAA">FL.ru</a>
-         <p></p>
             <a href="https://dribbble.com/DIMAAAAA">Dribbble</a>
          <p></p>
             Контакты:
-         <p></p>
             Email: <a href="mailto:workdimaaaaa@posteo.de">workdimaaaaa@posteo.de</a>
-         <p></p>
             ICQ: 380662645
-         <p></p>
             Skype: DmitryKryndach
-         <p></p>
-        
-        <form action="mailto:workdimaaaaa.posteo.de" method="post" enctype="text/plain">
-Имя:<br>
-<input type="text" name="name"><br>
-E-mail:<br>
-<input type="text" name="mail"><br>
-Сообщение:<br>
-<input type="text" name="comment" size="50"><br><br>
-<input type="submit" value="Send">
-<input type="reset" value="Reset">
-</form>
    </font>     
     
 </center>
