--- a/ru.html
+++ b/ru.html
@@ -4,9 +4,7 @@
     <font color="green"><b>Здравствуйте</b></font>
          <p></p>
     <font color="gray">
-        Портфолио:
-             <a href="https://fl.ru/users/DIMAAAAA">FL.ru</a>
-            <a href="https://dribbble.com/DIMAAAAA">Dribbble</a>
+             <a href="https://fl.ru/users/DIMAAAAA">Портфолио (FL.ru)</a>
          <p></p>
             Контакты:
             Email: <a href="mailto:workdimaaaaa@posteo.de">workdimaaaaa@posteo.de</a>
